# Chat-Gourmet-AI

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  vercel.json
.devcontainer/: devcontainer.json
.github/: aeec1e51-34f5-4fcc-b119-fd3c570f1932.jfif
.github/workflows/: keep-wam.yml
cloud-deployment/: README.md  __ini__.py  chatbot.py  connection.py  generation.py  pyproject.toml  rag.py  requirements.txt  retrival.py
core/: README.md  generation.py  pyproject.toml  rag.py  requirements.txt  retrieval.py  retrival.py  server.py  vercel.json
evaluation/: Makefile  README.md  evaluation.ipynb  pyproject.toml  synthetic-questions.csv
evaluation/dataset/: Llama-3.1-8B-answer.csv  Llama-3.1-8B-veredict.csv  Phi-3.5-mini-answer.csv  Phi-3.5-mini-veredict.csv  hybrid-answers.csv  hybrid-veredict.csv  qrewrite-answers.csv  qrewrite-veredict.csv  synthetic-questions.csv  vector-answers.csv  vector-veredict.csv
model-serve/: README.md  vllm-serve.ipynb
monitoring/: README.md  prepare_db.py  pyproject.toml
rag/: Dockerfile  README.md  generation.py  pyproject.toml  rag.py  requirements.txt  retrival.py  server.py
ui/: .dockerignore  Dockerfile  README.md  chatbot.py  connection.py  db.py  pyproject.toml  requirements.txt
ui/.streamlit/: config.toml
ui/pages/: monitoring.py
vector-db/: README.md  load_data.py  load_data_batch.py  load_data_pre_embedded.py  pyproject.toml  recipe-short-embeddings-gpu.ipynb  requirements.txt
