[project]
name = "Core"
version = "0.1.0"
description = "Core module of Chat Gourmet AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.114.1",
    "fastembed==0.3.6",
    "nest-asyncio>=1.6.0",
    "openai==1.44.1",
    "qdrant-client==1.11.1",
    "requests>=2.32.3",
    "uvicorn==0.30.6",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]
