[project]
name = "evaluation"
version = "0.1.0"
description = "Evaluation of Retrival and RAG flow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyverse[auth,jupyterlab]>=0.6.2",
    "polars>=1.8.2",
    "fastembed==0.3.6",
    "openai==1.44.1",
    "qdrant-client==1.11.1",
    "requests>=2.32.3",
    "ipywidgets>=8.1.5",
]
