[project]
name = "evaluation"
version = "0.1.0"
description = "Evaluation of Retrival and RAG flow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.8.2",
    "fastembed==0.3.6",
    "openai==1.44.1",
    "qdrant-client==1.11.1",
    "requests>=2.32.3",
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
    "jupyterlab>=4.2.5",
]
