[project]
name = "monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "polars>=1.9.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.35",
    "streamlit>=1.39.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
